--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description"
 		content="God Loves Corpus Christi. Find hope, community, and a place to belong. Join us at Church Unlimited." />
 
-	<title>God Loves CC</title>
+	<title>God Loves CC Update</title>
 
 	<!-- Open Graph -->
 	<meta property="og:title" content="God Loves CC" />
