finding stopping point

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description"
 		content="God Loves Corpus Christi. Find hope, community, and a place to belong. Join us at Church Unlimited." />
 
-	<title>God Loves CC Update</title>
+	<title>God Loves CC</title>
 
 	<!-- Open Graph -->
 	<meta property="og:title" content="God Loves CC" />
@@ -24,7 +24,7 @@
 
 <body>
 	<main>
-		<h1>God Loves CC</h1>
+		<h1 id="title">God Loves CC...Coming Soon</h1>
 	</main>
 	<script src="/assets/main.js" defer></script>
 </body>
